--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 <%= nav_bar :brand => "Machine Time", :brand_link => root_path %>
 <div class="container">
+<%= bootstrap_flash %>
 <%= yield %>
 </div>
 </body>
