--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -12,9 +12,16 @@
     </div>
   </div>
 
+  <div class="control-group">
+    <%= f.label :session_prefix, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :session_prefix, :class => 'text_field' %>
+    </div>
+  </div>
+
   <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= f.submit 'Apply', :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                machines_path, :class => 'btn' %>
+                machine_path(@machine), :class => 'btn' %>
   </div>
 <% end %>
