--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -5,29 +5,27 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th><%= model_class.human_attribute_name(:state) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>            
     </tr>
   </thead>
   <tbody>
     <% @machines.each do |machine| %>
       <tr>
-        <td><%= link_to machine.id, machine_path(machine) %></td>
-        <td><%= machine.name %></td>
-        <td><%= machine.description %></td>
-        <td><%=l machine.created_at %></td>
+        <td><%= link_to machine.name, machine_path(machine) %></td>
+        <td><%= machine.state %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_machine_path(machine), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      machine_path(machine),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
+          <%= link_to t('.start', :default => t("helpers.links.start")),
+                      start_machine_path(machine),
+                      :method => :put,
+                      :class => 'btn btn-mini btn-primary' if machine.can_start? %>
+          <%= link_to t('.stop', :default => t("helpers.links.stop")),
+                      stop_machine_path(machine),
+                      :method => :put,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure want to stop #{machine.name}?")) },
+                      :class => 'btn btn-mini btn-danger' if machine.can_stop? %>
+        </td> 
       </tr>
     <% end %>
   </tbody>
