--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,23 +1,27 @@
 <%- model_class = Machine -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1><%=t '.title', :default => @machine.name %></h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @machine.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:state) %>:</strong></dt>
+  <dd><%= @machine.state %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @machine.description %></dd>
 </dl>
 
 <div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              machines_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_machine_path(@machine), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              machine_path(@machine),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+  <%= link_to t('.start', :default => t("helpers.links.start")),
+              start_machine_path(@machine),
+              :method => :put,
+              :class => 'btn btn-primary' if @machine.can_start? %>
+  <%= link_to t('.stop', :default => t("helpers.links.stop")),
+              stop_machine_path(@machine),
+              :method => :put,
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure want to stop #{@machine.name}?")) },
+              :class => 'btn btn-danger' if @machine.can_stop? %>
+  <%= link_to t('.edit', :default => t("helpers.links.preference")),
+              edit_machine_path(@machine),
+              :class => 'btn' %>
+
 </div>
