--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Machine Time</title>
+  <title>Machine</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= nav_bar :brand => "Machine Time", :brand_link => root_path %>
+<%= nav_bar :brand => "top", :brand_link => root_path %>
 <div class="container">
 <%= bootstrap_flash %>
 <%= yield %>
