--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,36 +1,6 @@
+<%= render :partial => 'machine_header' %>
+
 <%- model_class = Machine -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => @machine.name %> &lt <%= @machine.global_id %> &gt</h1>
-</div>
-<p>
-<%= @machine.description %>
-</p>
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:state) %>:</strong></dt>
-  <dd><%= @machine.state %></dd>
-  <% if @machine.current_session %>
-  <dt><strong><%= model_class.human_attribute_name(:session) %>:</strong></dt>
-  <dd><%= @machine.current_session.name %> &lt <%= @machine.current_session.global_id %> &gt</dd>  
-  <dt><strong><%= model_class.human_attribute_name(:started_at) %>:</strong></dt>
-  <dd><%= @machine.current_session.started_at %></dd>  
-  <% end %>
-</dl>
-
-<div class="form-actions">
-  <%= link_to t('.start', :default => t("helpers.links.start")),
-              start_machine_path(@machine),
-              :method => :put,
-              :class => 'btn btn-primary' if @machine.can_start? %>
-  <%= link_to t('.stop', :default => t("helpers.links.stop")),
-              stop_machine_path(@machine),
-              :method => :put,
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure want to stop #{@machine.name}?")) },
-              :class => 'btn btn-danger' if @machine.can_stop? %>
-  <%= link_to t('.edit', :default => t("helpers.links.preference")),
-              edit_machine_path(@machine),
-              :class => 'btn' %>
-
-</div>
 
 <table class="table table-striped">
   <thead>
@@ -38,14 +8,25 @@
       <th><%= model_class.human_attribute_name(:session) %></th>
       <th><%= model_class.human_attribute_name(:started_at) %></th>
       <th><%= model_class.human_attribute_name(:stopped_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>      
     </tr>
   </thead>
   <tbody>
     <% @machine.sessions_finished.order(started_at: :desc).each do |session| %>
       <tr>
-        <td><%= session.name %> &lt <%= session.global_id %>&gt</td>
+        <td><%= link_to session.name, machine_session_url(@machine, session) %> </td>
         <td><%= session.started_at %></td>
         <td><%= session.stopped_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_machine_session_path(@machine, session), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      machine_session_path(@machine, session),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
+
       </tr>
     <% end %>
   </tbody>
