--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -19,6 +19,13 @@
     </div>
   </div>
 
+  <div class="control-group">
+    <%= f.label :archiver_url, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :archiver_url, :class => 'text_field' %>
+    </div>
+  </div>
+
   <div class="form-actions">
     <%= f.submit 'Apply', :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
