--- a/app/views/application/_machine_header.html.erb
+++ b/app/views/application/_machine_header.html.erb
@@ -10,11 +10,17 @@
   <dd><%= @machine.state %></dd>
   <% if @machine.current_session %>
   <dt><strong><%= model_class.human_attribute_name(:session) %>:</strong></dt>
-  <dd><%= @machine.current_session.name %> &lt <%= @machine.current_session.global_id %> &gt</dd>  
+  <dd><%= @machine.current_session.name %> &lt <%= @machine.current_session.global_id %> &gt
+      <%= link_to t('.label', :default => t("helpers.links.label")),
+              current_session_machine_path(@machine, :format => 'label'),
+              :method => :get,
+              :class => 'btn btn-mini' if @machine.can_stop? %>  
+  </dd>  
   <dt><strong><%= model_class.human_attribute_name(:started_at) %>:</strong></dt>
   <dd><%= @machine.current_session.started_at %></dd>  
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @machine.current_session.description %></dd> 
+
   <% end %>
 </dl>
 
@@ -28,6 +34,10 @@
               :method => :put,
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure want to stop #{@machine.name}?")) },
               :class => 'btn btn-danger' if @machine.can_stop? %>
+  <%= link_to 'All labels',
+              machine_sessions_path(@machine, :format => 'label'),
+              :method => :get,
+              :class => 'btn' if @machine.can_stop? %>  
   <%= link_to t('.edit', :default => t("helpers.links.preference")),
               edit_machine_path(@machine),
               :class => 'btn' %>
