--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -5,7 +5,8 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:session) %></th>
+      <th><%= model_class.human_attribute_name(:session) %>
+      </th>
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:started_at) %></th>
       <th><%= model_class.human_attribute_name(:stopped_at) %></th>
@@ -35,5 +36,18 @@
 
       </tr>
     <% end %>
+    <tfoot>
+      <th>
+      </th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th>
+      <%= link_to t('.label', :default => t("helpers.links.label")),
+              machine_sessions_path(@machine, :format => 'label'),
+              :method => :get,
+              :class => 'btn btn-mini' %>
+      </th>
+    </tfoot>
   </tbody>
 </table>
