--- a/app/views/application/_machine_header.html.erb
+++ b/app/views/application/_machine_header.html.erb
@@ -11,10 +11,10 @@
   <% if @machine.current_session %>
   <dt><strong><%= model_class.human_attribute_name(:session) %>:</strong></dt>
   <dd><%= @machine.current_session.name %> &lt <%= @machine.current_session.global_id %> &gt
-      <%= link_to t('.label', :default => t("helpers.links.label")),
+      <%= link_to glyph(:tag),
               current_session_machine_path(@machine, :format => 'label'),
               :method => :get,
-              :class => 'btn btn-mini' if @machine.can_stop? %>  
+              :class => 'btn' if @machine.can_stop? %>  
   </dd>  
   <dt><strong><%= model_class.human_attribute_name(:started_at) %>:</strong></dt>
   <dd><%= @machine.current_session.started_at %></dd>  
@@ -25,17 +25,17 @@
 </dl>
 
 <div class="form-actions">
-  <%= link_to t('.start', :default => t("helpers.links.start")),
+  <%= link_to glyph(:play),
               start_machine_path(@machine),
               :method => :put,
               :class => 'btn btn-primary' if @machine.can_start? %>
-  <%= link_to t('.stop', :default => t("helpers.links.stop")),
+  <%= link_to glyph(:stop),
               stop_machine_path(@machine),
               :method => :put,
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure want to stop #{@machine.name}?")) },
               :class => 'btn btn-danger' if @machine.can_stop? %>
 
-  <%= link_to t('.edit', :default => t("helpers.links.preference")),
+  <%= link_to glyph(:cog),
               edit_machine_path(@machine),
               :class => 'btn' %>
 
