--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -22,14 +22,14 @@
         <td><%= session.stopped_at %></td>
         <td>
           <% if @machine.archiver_url %>
-          <%= link_to t('.data', :default => t("helpers.links.data")),
-                      session.archiver_path, :class => 'btn btn-mini' %>
+          <%= link_to glyph(:search),
+                      session.archiver_path, :class => 'btn' %>
           <% end %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to glyph(:trash),
                       machine_session_path(@machine, session),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-danger' %>
         </td>
 
       </tr>
@@ -41,10 +41,10 @@
       <th></th>
       <th></th>
       <th>
-      <%= link_to t('.label', :default => t("helpers.links.label")),
+      <%= link_to glyph(:tag),
               machine_sessions_path(@machine, :format => 'label'),
               :method => :get,
-              :class => 'btn btn-mini' %>
+              :class => 'btn' %>
       </th>
     </tfoot>
   </tbody>
