--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <%= nav_bar brand: Settings.service.name do %>
  <%= menu_group pull: :right do %>
   <%= menu_item "developer", Settings.service.repo_url %>
-  <%= menu_item "help", Settings.service.help_url %>
+  <%= menu_item glyph(:'question-sign'), Settings.service.help_url %>
  <% end %>
 <% end %>
 <div class="container">
