--- a/app/views/application/_machine_header.html.erb
+++ b/app/views/application/_machine_header.html.erb
@@ -1,30 +1,12 @@
 <%- model_class = Machine -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => @machine.name %> &lt <%= @machine.global_id %> &gt</h1>
-</div>
-<p>
-<%= @machine.description %>
-</p>
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:state) %>:</strong></dt>
-  <dd><%= @machine.state %></dd>
-  <% if @machine.current_session %>
-  <dt><strong><%= model_class.human_attribute_name(:session) %>:</strong></dt>
-  <dd><%= @machine.current_session.name %> &lt <%= @machine.current_session.global_id %> &gt
-      <%= link_to glyph(:tag),
-              current_session_machine_path(@machine, :format => 'label'),
-              :method => :get,
-              :class => 'btn' if @machine.can_stop? %>  
-  </dd>  
-  <dt><strong><%= model_class.human_attribute_name(:started_at) %>:</strong></dt>
-  <dd><%= @machine.current_session.started_at %></dd>  
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @machine.current_session.description %></dd> 
+<h1><%=link_to @machine.name, machine_path(@machine) %></h1>
+<p><%= @machine.description %></p>
 
-  <% end %>
-</dl>
-
-<div class="form-actions">
+<div>
+  <%= link_to glyph(:cog),
+              edit_machine_path(@machine),
+              :class => 'btn' %>
   <%= link_to glyph(:play),
               start_machine_path(@machine),
               :method => :put,
@@ -34,9 +16,19 @@
               :method => :put,
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure want to stop #{@machine.name}?")) },
               :class => 'btn btn-danger' if @machine.can_stop? %>
+  <%= link_to glyph(:tag),
+              current_session_machine_path(@machine, :format => 'label'),
+              :method => :get,
+              :class => 'btn' if @machine.can_stop? %>
 
-  <%= link_to glyph(:cog),
-              edit_machine_path(@machine),
-              :class => 'btn' %>
 
+</div>
+<strong>state: </strong> <%= @machine.state %>
+<br/>
+<% if @machine.current_session %>
+<h2>
+<%= link_to @machine.current_session.name, machine_session_path(@machine, @machine.current_session) %> &lt <%= @machine.current_session.global_id %> &gt
+</h2>
+<p><%= @machine.current_session.description %></p>
+<% end %>
 </div>
