--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => 'machine_header' %>
 
 <%- model_class = Machine -%>
-
+<h2>Log</h2>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -14,7 +14,8 @@
     </tr>
   </thead>
   <tbody>
-    <% @machine.sessions_finished.order(started_at: :desc).each do |session| %>
+    <%# @machine.sessions_finished.order(started_at: :desc).each do |session| %>
+    <% @machine.sessions.order(started_at: :desc).each do |session| %>
       <tr>
         <td><%= link_to session.name, machine_session_path(@machine, session) %> </td>
         <td><%= session.description %></td>
