--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -27,10 +27,10 @@
   </div>
 
   <div class="form-actions">
-    <%= f.submit 'Apply', :class => 'btn btn-primary' %>
+    <%= f.submit 'OK', :class => 'btn btn-primary' %>
     <% if @machine.id %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                machine_path(@machine), :class => 'btn' %>
+                machines_path, :class => 'btn' %>
     <% end %>
   </div>
 <% end %>
