--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -5,27 +5,35 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:state) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>            
+      <th>machine</th>
+      <th>session</th>
     </tr>
   </thead>
   <tbody>
     <% @machines.each do |machine| %>
       <tr>
-        <td><%= link_to machine.name, machine_path(machine) %></td>
-        <td><%= machine.state %></td>
         <td>
-          <%= link_to t('.start', :default => t("helpers.links.start")),
-                      start_machine_path(machine),
-                      :method => :put,
-                      :class => 'btn btn-mini btn-primary' if machine.can_start? %>
-          <%= link_to t('.stop', :default => t("helpers.links.stop")),
-                      stop_machine_path(machine),
-                      :method => :put,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => "Are you sure you want to stop #{machine.name}?")) },
-                      :class => 'btn btn-mini btn-danger' if machine.can_stop? %>
-        </td> 
+	  <%= link_to machine.name, machine_path(machine) %>
+	  <%= link_to glyph(:cog),
+              edit_machine_path(machine),
+	      :title => 'edit machine',
+              :class => 'btn' %>
+	  <%= link_to glyph(:stop), 
+	      stop_machine_path(machine),
+	      :method => :put,
+	      :title => "stop the current session",
+	      :data => { :confirm => "Are you sure you want to stop the session #{machine.current_session.name}?" },
+	      :class => 'btn btn-danger' if machine.can_stop? %>
+            <%= link_to glyph(:play), start_machine_path(machine), :title => "start session", :method => :put, :class => 'btn btn-primary' if machine.can_start? %>
+	</td>
+        <td>
+          <% if machine.current_session %>
+	    <%= link_to machine.current_session.name, machine_session_path(machine, machine.current_session) %> &lt <%= machine.current_session.global_id %> &gt
+
+	  <% else %>
+            <%= tag_label(machine.state) %>
+	  <% end %>
+	</td>
       </tr>
     <% end %>
   </tbody>
