--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -6,6 +6,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :stage_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :stage_name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :description, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :description, :class => 'text_field' %>
